# elt-dataflow-n8n

./: README.md  docker-compose-airflow.yml  docker-compose-dbt.yml  pyproject.toml
.astro/: config.yaml
dbt/: .user.yml  dbt_project.yml
dbt/models/marts/: mart_dim_produtos.sql
dbt/models/staging/: stg_products.sql
docs/: etapa02.md  etapa03.md
scripts/: extract_products.py  extract_users.py  xtract_carts.py
